--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/biotrio?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=12345678
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=biotriocinema@gmail.com
+spring.mail.password=BioKeaTrio
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
