--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/biotrio?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Copenhagen&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=TRUE&useSSL=FALSE
 spring.datasource.username=root
-spring.datasource.password=cosmin123
+spring.datasource.password=12345678
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=biotriocinema@gmail.com
