--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/biotrio?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Copenhagen&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=TRUE&useSSL=FALSE
+spring.datasource.url=jdbc:mysql://localhost:3306/biotriogenerate?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Copenhagen&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=TRUE&useSSL=FALSE
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.mail.host=smtp.gmail.com
