--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/biotriogenerate?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Copenhagen&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=TRUE&useSSL=FALSE
+spring.datasource.url=jdbc:mysql://localhost:3306/biotrio?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Copenhagen&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=TRUE&useSSL=FALSE
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.mail.host=smtp.gmail.com
@@ -12,3 +12,5 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.thymeleaf.render-hidden-markers-before-checkboxes=true
+thymeleaf.version=3.0.2.RELEASE
+thymeleaf-layout-dialect.version=2.1.1
